# rag0

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  dev.sh  events.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  config.py
src/activities/: __init__.py  ask.py  cli.py  commands.py  ingest.py  parse.py  stats.py  store.py  vector_index.py
src/agents/: __init__.py
src/agents/ask/: __init__.py  graph.py  nodes.py  state.py
src/ingestion/: __init__.py  chunking.py  detector.py  doc_parser.py  models.py  storage.py  vector_store.py  vision_parser.py
src/rag0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/temporal/: __init__.py  worker.py
src/utils/: __init__.py  cli.py
src/workflows/: __init__.py  ingestion_workflow.py  main_workflow.py  question_workflow.py
tests/: test_interactive_cli.py
tests/ingestion/: test_chunking.py  test_storage.py  test_vector_store.py
tests/utils/: test_cli.py
tests/workflow/: test_langgraph_agent.py  test_main_workflow.py
