[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag0"
version = "0.1.0"
description = "Temporal-powered document ingestion and agentic RAG workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RAG0 Contributors" }]
dependencies = [
    "docling>=1.13.1,<3.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.2.0",
    "httpx>=0.28.1",
    "temporalio>=1.5.0",
    "numpy>=1.26.0",
    "chromadb>=0.5.3",
    "llama-index>=0.14.4",
    "llama-index-readers-docling>=0.1.3",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-embeddings-ollama>=0.8.3",
    "langgraph>=0.6.8",
    "langsmith>=0.4.33",
    "ollama>=0.6.0",
    "langchain-core>=0.2.29",
    "langchain-community>=0.2.10",
    "langchain-ollama>=0.1.3",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8,<0.7.0",
    "mypy>=1.10.0,<1.14.0",
    "pre-commit>=3.7.0,<4.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
explicit_package_bases = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
